<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back_party_crop"
    tools:context="com.mocoteam1.musicmatch.LoginActivity">

    <ImageView
        android:id="@+id/loginActivityPartyBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login_back_party_crop" />

    <TextView
        android:id="@+id/loginActivityWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/login_activity_welcome"
        android:textAlignment="center"
        android:textColor="@color/font"
        android:textColorHint="@color/colorPrimaryTextColor"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/loginActivityUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginActivityUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/font"
        android:ems="10"
        android:hint="@string/login_activity_username_hint"
        android:inputType="textPersonName"
        android:textColor="@color/font"
        android:textColorHint="@color/hint_font"
        app:layout_constraintBottom_toTopOf="@+id/loginActivityPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginActivityPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/font"
        android:ems="10"
        android:hint="@string/login_activity_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/font"
        android:textColorHint="@color/hint_font"
        app:layout_constraintBottom_toTopOf="@+id/loginActivityOkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- TODO: Bug bei TextView wenn Margin = 8. Text hält sich dann nicht in der Mitte -->


    <TextView
        android:id="@+id/loginActivityLoginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/login_activity_login_error"
        android:textColor="@color/font"
        android:textColorHint="@color/colorPrimaryTextColor"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityPassword" />

    <ProgressBar
        android:id="@+id/loginActivityProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginActivityOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/login_activity_ok_button"
        android:textColor="@color/font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginActitvityCreateAccountButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginActitvityCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttons"
        android:text="@string/login_activity_create_account_button_text"
        android:textColor="@color/font"
        app:layout_constraintBottom_toBottomOf="@+id/loginActivityOkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginActivityOkButton"
        app:layout_constraintTop_toTopOf="@+id/loginActivityOkButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />
</android.support.constraint.ConstraintLayout>
